--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -12,6 +12,8 @@
   left: 0;
   z-index: 3;
 
+  background-color: $blue;
+
   // display: none;
 
   @media (min-width: $tablet-width) {
@@ -33,7 +35,6 @@
   width: 100%;
   min-height: 55px;
   padding-top: 9px;
-  background-color: $blue;
 
 
   &:hover {
@@ -69,10 +70,11 @@
 }
 
 .main-nav__item--1 {
-  box-shadow: 0 1px 0 0 $black-opacity, inset 0 1 0 0 $white-opacity;
+  box-shadow: 0 1px 0 0 $black-opacity, inset 0 2px 0 0 $white-opacity;
 
   @media (min-width: $tablet-width) {
     padding-left: 47px;
+    box-shadow: none;
   }
 
   @media (min-width: $desktop-width) {
@@ -82,10 +84,11 @@
 }
 
 .main-nav__item--2 {
-  box-shadow: 0 1px 0 0 $black-opacity;
+  box-shadow: 0 1px 0 0 $black-opacity, inset 0 2px 0 0 $white-opacity;
 
   @media (min-width: $tablet-width) {
     margin-left: -10px;
+    box-shadow: none;
   }
 
   @media (min-width: $desktop-width) {
@@ -95,10 +98,11 @@
 }
 
 .main-nav__item--3 {
-  box-shadow: 0 1px 0 0 $black-opacity;
+  box-shadow: 0 1px 0 0 $black-opacity, inset 0 2px 0 0 $white-opacity;
 
   @media (min-width: $tablet-width) {
     margin-left: 16px;
+    box-shadow: none;
   }
 
   @media (min-width: $desktop-width) {
@@ -108,10 +112,25 @@
 }
 
 .main-nav__item--4 {
-  background: linear-gradient($opacity-main-nav 0%, $opacity-main-nav 100%);
+  box-shadow: 0 1px 0 0 $black-opacity, inset 0 2px 0 0 $white-opacity;
+  &::after {
+    content: "";
+    width: 100%;
+    height: 7px;
+    box-shadow: inset 0 -7px 0 0 $black-opacity;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    @media (min-width: tablet-width) {
+      display: none;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     padding-right: 29px;
+    background: none;
+    box-shadow: none;
   }
 
   @media (min-width: $desktop-width) {
