--- a/source/sass/components/user-info.scss
+++ b/source/sass/components/user-info.scss
@@ -50,6 +50,11 @@
     background-color: $gray5;
   }
 
+  &:focus {
+    background-color: $white;
+    border: 4px solid $gray5;
+  }
+
   &:active {
     background-color: $white;
     border: 4px solid $gray5;
