--- a/source/sass/components/gallery-card.scss
+++ b/source/sass/components/gallery-card.scss
@@ -1,5 +1,5 @@
 .gallery-card {
-  padding-bottom: 15px;
+  padding-bottom: 14px;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 0;
@@ -19,7 +19,8 @@
 
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 22px;
+    padding-top: 0;
+    padding-bottom: 18px;
   }
 
   @media (min-width: $desktop-width) {
@@ -36,7 +37,7 @@
 .gallery-card__title {
   margin: 0;
   padding-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
 
   font-weight: 700;
   font-size: 14px;
@@ -44,18 +45,22 @@
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 10px;
+    padding-top: 14px;
   }
 }
 
 .gallery-card__text {
   margin: 0;
-  margin-bottom: 13px;
+  margin-bottom: 12px;
 
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   color: $darkGray;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
 
   @media (min-width: $desktop-width) {
     color: $white;
@@ -66,16 +71,29 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 10px;
+    padding-top: 10px;
+  }
 }
 
 .gallery-card__likes {
   @media (min-width: $tablet-width) {
-    padding-top: 28px;
+    padding-top: 20px;
   }
 }
 
 .gallery-card__button {
   @include btn-reset;
+
+  padding-left: 0;
+  padding-right: 3px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 5px;
+    padding-top: 7px;
+  }
 }
 
 .gallery-card__icon {
@@ -83,5 +101,29 @@
 
   @media (min-width: $desktop-width) {
     color: $white;
+  }
+}
+
+.gallery__item--2 .gallery-card__button,
+.gallery__item--4 .gallery-card__button {
+  @media (min-width: $tablet-width) {
+    padding-right: 4px;
+  }
+}
+
+.gallery__item--3 .gallery-card__button {
+  @media (min-width: $tablet-width) {
+    padding-right: 5px;
+  }
+}
+
+.gallery__item--1 .gallery-card__number {
+  @media (min-width: $desktop-width) {
+    padding-right: 0;
+  }
+}
+.gallery__item--3 .gallery-card__number {
+  @media (min-width: $tablet-width) {
+    padding-right: 16px;
   }
 }
