--- a/source/sass/components/gallery.scss
+++ b/source/sass/components/gallery.scss
@@ -1,3 +1,15 @@
+.gallery {
+  padding-top: 26px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 56px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 57px;
+  }
+}
+
 .gallery__inner {
   padding-left: 20px;
   padding-right: 20px;
@@ -32,12 +44,12 @@
 
   &::before {
     content: "";
-    width: 100%;
+    width: 114%;
     height: 1px;
     background-color: $gray5;
     position: absolute;
     top: -22px;
-    left: 0;
+    left: -20px;
 
     @media (min-width: $tablet-width) {
       display: none;
