--- a/source/sass/components/intro.scss
+++ b/source/sass/components/intro.scss
@@ -85,6 +85,12 @@
   }
 }
 
+.intro__inner--special {
+  @media (min-width: $desktop-width) {
+    margin-bottom: 100px;
+  }
+}
+
 .intro__img {
   width: 100%;
   height: 39px;
