--- a/source/sass/components/user-visited.scss
+++ b/source/sass/components/user-visited.scss
@@ -23,6 +23,7 @@
 
     padding-top: 39px;
     padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -36,6 +37,7 @@
 
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
+    padding-left: 26px;
   }
 }
 
