--- a/source/sass/components/video.scss
+++ b/source/sass/components/video.scss
@@ -1,9 +1,20 @@
 .video {
+  margin-bottom: 107px;
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 47px;
+    margin-bottom: 43px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 28px;
+    margin-bottom: 109px;
+  }
 }
 
 .video__description {
-  padding-left: 28px;
+  padding-left: 22px;
   padding-right: 20px;
 
   @media (min-width: $tablet-width) {
@@ -18,6 +29,8 @@
 }
 
 .video__title {
+  margin: 0;
+  padding-top: 10px;
 
   font-weight: 700;
   font-size: 18px;
@@ -32,7 +45,12 @@
 }
 
 .video__text {
-  margin-bottom: 33px;
+  padding: 0;
+  margin: 0;
+  padding-top: 28px;
+  padding-bottom: 35px;
+  padding-left: 2px;
+
 
   font-weight: 400;
   font-size: 14px;
@@ -41,6 +59,11 @@
   text-align: center;
 
   color: $darkGray;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 33px;
+    padding-bottom: 80px;
+  }
 }
 
 .video__content {
@@ -78,8 +101,8 @@
 .video__reload {
   @include btn-reset;
 
-  margin-left: 25px;
-  margin-right: 133px;
+  margin-left: 15px;
+  margin-right: 120px;
   margin-top: 23px;
 
   @media (min-width: $tablet-width) {
@@ -87,13 +110,13 @@
     margin-left: 0;
     margin-top: 0;
     position: absolute;
-    top: 45px;
-    left: 80px;
+    top: 35px;
+    left: 89px;
   }
 
   @media (min-width: $desktop-width) {
-    top: 40px;
-    left: 240px;
+    top: 32px;
+    left: 229px;
   }
 }
 
@@ -101,18 +124,19 @@
   @include btn-reset;
 
   margin-top: 23px;
+  margin-right: 14px;
 
   @media (min-width: $tablet-width) {
     margin-right: 0;
     margin-top: 0;
     position: absolute;
-    top: 45px;
-    right: 180px;
+    top: 35px;
+    right: 146px;
   }
 
   @media (min-width: $desktop-width) {
-    top: 40px;
-    right: 300px;
+    top: 32px;
+    right: 287px;
   }
 }
 
@@ -124,13 +148,13 @@
   @media (min-width: $tablet-width) {
     margin-top: 0;
     position: absolute;
-    top: 45px;
-    right: 120px;
+    top: 35px;
+    right: 95px;
   }
 
   @media (min-width: $desktop-width) {
-    top: 40px;
-    right: 250px;
+    top: 32px;
+    right: 236px;
   }
 }
 
